fixed z-index on iphone animation layer

--- a/app/assets/stylesheets/partials/_landing-page__cta.scss
+++ b/app/assets/stylesheets/partials/_landing-page__cta.scss
@@ -1,8 +1,10 @@
-.shelf--cta {
+.shelf__wrapper--cta {
   background-image: url(/images/landing/bg-1.jpg);
   background-position: 86% 71%;
   background-repeat: no-repeat;
+}
 
+.shelf--cta {
   &.shelf--facebook-logged-out {
     .shelf__h1 {
       margin-top: 2em;
