--- a/app/assets/stylesheets/partials/_landing-page__iphone.scss
+++ b/app/assets/stylesheets/partials/_landing-page__iphone.scss
@@ -8,7 +8,7 @@
           transform: translateZ(0);
   top: 70px;
   width: 100%;
-  z-index: 1;
+  z-index: 0;
 
   //non-normative
   .iphone {
